// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout renders condensed layout 1`] = `
.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 1px;
}

.c7 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
}

.c11 {
  --pane-min-width: 256px;
  --pane-max-width-diff: 511px;
  --pane-max-width: calc(100vw - var(--pane-max-width-diff));
  width: 100%;
  padding: 0;
}

.c0 {
  padding: 16px;
}

.c2 {
  width: 100%;
  margin-bottom: 16px;
}

.c4 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-top: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 16px;
}

.c9 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-bottom: 16px;
}

.c10 {
  height: 100%;
  position: relative;
  display: none;
  margin-right: 16px;
}

.c12 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

@media screen and (min-width:768px) {
  .c11 {
    width: 256px;
    overflow: auto;
  }
}

@media screen and (min-width:1012px) {
  .c11 {
    width: 296px;
  }
}

@media screen and (min-width:1280px) {
  .c11 {
    --pane-max-width-diff: 959px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    width: auto;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: 16px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

<div>
  <div
    class="c0"
    style="--sticky-pane-height: 100vh;"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <div
          class="c3"
        >
          Header
        </div>
        <div
          class="c4"
        />
      </header>
      <div
        class="c5"
      >
        <main
          class="c6"
        >
          <div
            class=""
          />
          <div
            class="c7"
          >
            Content
          </div>
          <div
            class=""
          />
        </main>
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          />
          <div
            class="c11"
            style="--pane-width: 296px;"
          >
            Pane
          </div>
        </div>
      </div>
      <footer
        class="c12"
      >
        <div
          class="c9"
        />
        <div
          class="c3"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders default layout 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  width: 100%;
  margin-bottom: 16px;
}

.c3 {
  padding: 0;
}

.c4 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-top: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 1px;
}

.c7 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 16px;
}

.c9 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-bottom: 16px;
}

.c10 {
  height: 100%;
  position: relative;
  display: none;
  margin-right: 16px;
}

.c11 {
  --pane-min-width: 256px;
  --pane-max-width-diff: 511px;
  --pane-max-width: calc(100vw - var(--pane-max-width-diff));
  width: 100%;
  padding: 0;
}

.c12 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c2 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media screen and (min-width:1012px) {
  .c4 {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    width: auto;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: 16px;
  }
}

@media screen and (min-width:1012px) {
  .c8 {
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media screen and (min-width:1012px) {
  .c9 {
    margin-left: -24px;
    margin-right: -24px;
    margin-bottom: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c10 {
    margin-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    width: 256px;
    overflow: auto;
  }
}

@media screen and (min-width:1012px) {
  .c11 {
    width: 296px;
  }
}

@media screen and (min-width:1280px) {
  .c11 {
    --pane-max-width-diff: 959px;
  }
}

@media screen and (min-width:1012px) {
  .c12 {
    margin-top: 24px;
  }
}

<div>
  <div
    class="c0"
    style="--sticky-pane-height: 100vh;"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <div
          class="c3"
        >
          Header
        </div>
        <div
          class="c4"
        />
      </header>
      <div
        class="c5"
      >
        <main
          class="c6"
        >
          <div
            class=""
          />
          <div
            class="c7"
          >
            Content
          </div>
          <div
            class=""
          />
        </main>
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          />
          <div
            class="c11"
            style="--pane-width: 296px;"
          >
            Pane
          </div>
        </div>
      </div>
      <footer
        class="c12"
      >
        <div
          class="c9"
        />
        <div
          class="c3"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders pane in different position when narrow 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  width: 100%;
  margin-bottom: 16px;
}

.c3 {
  padding: 0;
}

.c4 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-top: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 1px;
}

.c7 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 16px;
}

.c9 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-bottom: 16px;
}

.c10 {
  height: 100%;
  position: relative;
  display: none;
  margin-right: 16px;
}

.c11 {
  --pane-min-width: 256px;
  --pane-max-width-diff: 511px;
  --pane-max-width: calc(100vw - var(--pane-max-width-diff));
  width: 100%;
  padding: 0;
}

.c12 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c2 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media screen and (min-width:1012px) {
  .c4 {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    width: auto;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: 16px;
  }
}

@media screen and (min-width:1012px) {
  .c8 {
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media screen and (min-width:1012px) {
  .c9 {
    margin-left: -24px;
    margin-right: -24px;
    margin-bottom: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c10 {
    margin-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    width: 256px;
    overflow: auto;
  }
}

@media screen and (min-width:1012px) {
  .c11 {
    width: 296px;
  }
}

@media screen and (min-width:1280px) {
  .c11 {
    --pane-max-width-diff: 959px;
  }
}

@media screen and (min-width:1012px) {
  .c12 {
    margin-top: 24px;
  }
}

<div>
  <div
    class="c0"
    style="--sticky-pane-height: 100vh;"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <div
          class="c3"
        >
          Header
        </div>
        <div
          class="c4"
        />
      </header>
      <div
        class="c5"
      >
        <main
          class="c6"
        >
          <div
            class=""
          />
          <div
            class="c7"
          >
            Content
          </div>
          <div
            class=""
          />
        </main>
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          />
          <div
            class="c11"
            style="--pane-width: 296px;"
          >
            Pane
          </div>
        </div>
      </div>
      <footer
        class="c12"
      >
        <div
          class="c9"
        />
        <div
          class="c3"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders with dividers 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  width: 100%;
  margin-bottom: 16px;
}

.c3 {
  padding: 0;
}

.c4 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-top: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 1px;
}

.c7 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
}

.c12 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-bottom: 16px;
}

.c10 {
  --pane-min-width: 256px;
  --pane-max-width-diff: 511px;
  --pane-max-width: calc(100vw - var(--pane-max-width-diff));
  width: 100%;
  padding: 0;
}

.c11 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  margin-bottom: 16px;
}

.c9 {
  height: 100%;
  position: relative;
  display: none;
  margin-left: 16px;
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c2 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media screen and (min-width:1012px) {
  .c4 {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media screen and (min-width:1012px) {
  .c12 {
    margin-left: -24px;
    margin-right: -24px;
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    width: 256px;
    overflow: auto;
  }
}

@media screen and (min-width:1012px) {
  .c10 {
    width: 296px;
  }
}

@media screen and (min-width:1280px) {
  .c10 {
    --pane-max-width-diff: 959px;
  }
}

@media screen and (min-width:1012px) {
  .c11 {
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    width: auto;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    margin-right: 16px;
  }
}

@media screen and (min-width:1012px) {
  .c8 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c9 {
    margin-left: 24px;
  }
}

<div>
  <div
    class="c0"
    style="--sticky-pane-height: 100vh;"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        <div
          class="c3"
        >
          Header
        </div>
        <div
          class="c4"
        />
      </header>
      <div
        class="c5"
      >
        <main
          class="c6"
        >
          <div
            class=""
          />
          <div
            class="c7"
          >
            Content
          </div>
          <div
            class=""
          />
        </main>
        <div
          class="c8"
        >
          <div
            class="c4"
          />
          <div
            class="c9"
          />
          <div
            class="c10"
            style="--pane-width: 296px;"
          >
            Pane
          </div>
        </div>
      </div>
      <footer
        class="c11"
      >
        <div
          class="c12"
        />
        <div
          class="c3"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;
